--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Total Body</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Total Body - Фитнес-студия</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="app">
-        <main id="main-content">
-            <!-- Pages will be loaded here -->
-        </main>
-
+    <div class="app-container">
+        <div id="main-content"></div>
         <nav class="tab-bar">
-            <button class="tab-item active" data-page="home">
+            <div class="tab-item active" data-page="home">
                 <span class="tab-icon">🏠</span>
                 <span class="tab-label">Главная</span>
-            </button>
-            <button class="tab-item" data-page="schedule">
+            </div>
+            <div class="tab-item" data-page="schedule">
                 <span class="tab-icon">📅</span>
                 <span class="tab-label">Расписание</span>
-            </button>
-            <button class="tab-item" data-page="account">
+            </div>
+            <div class="tab-item" data-page="account">
                 <span class="tab-icon">👤</span>
-                <span class="tab-label">Профиль</span>
-            </button>
+                <span class="tab-label">Личный кабинет</span>
+            </div>
         </nav>
     </div>
     <script src="client.js"></script>
